feat: simplify structure, fix gitignore add dice-co-effecient

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2016",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-    "module": "NodeNext",                                /* Specify what module code is generated. */
-    "moduleResolution": "NodeNext",                      /* Specify how TypeScript looks up a file from a given module specifier. */
+    "lib": ["ESNext", "DOM"],                   
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",                    /* Specify how TypeScript looks up a file from a given module specifier. */
     "declaration": true,                                 /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
     "declarationMap": true,                              /* Create sourcemaps for d.ts files. */
     "sourceMap": true,                                   /* Create source map files for emitted JavaScript files. */
