chore: clean up and strat trying to make api consistent wip

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext", "DOM"],                   
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "lib": ["ES2024", "DOM"],                   
+    "target": "ES2024",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "outDir": "./dist/",
+    "declarationDir": "./dist/types",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
-    "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
