--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "cuddle-cluster",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "vitest",
