--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
   "compilerOptions": {
-    "lib": ["ES2024", "DOM"],                   
     "target": "ES2024",
+    "lib": ["ES2024", "DOM"],
+    "rootDir": "./src",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "outDir": "./dist/",
-    "declarationDir": "./dist/types",
+    "resolveJsonModule": true,
+    "strict": true,
     "declaration": true,
+    "declarationDir": "./dist/types",
     "declarationMap": true,
+    "outDir": "./dist/",
     "sourceMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "rootDir": "./src"
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
