--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "cuddle-cluster",
+  "name": "text-toolbox",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "keywords": [],
   "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "files": [
     "dist"
   ],
