--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2024",
-    "lib": ["ES2024", "DOM"],
+    "target": "es2022",
+    "lib": ["es2022"],
+    "moduleDetection": "force",
     "rootDir": "./src",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "Preserve",
     "resolveJsonModule": true,
+    "allowJs": true,
     "strict": true,
     "declaration": true,
-    "declarationDir": "./dist/types",
     "declarationMap": true,
     "outDir": "./dist/",
     "sourceMap": true,
