--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "text-toolbox",
   "type": "module",
   "version": "1.0.11",
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.11.0",
   "description": "",
   "author": "",
   "license": "MIT",
@@ -40,7 +40,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "latest",
-    "@types/node": "^22.15.6",
+    "@types/node": "latest",
     "@vitest/coverage-v8": "latest",
     "bumpp": "latest",
     "changelogithub": "latest",
@@ -51,5 +51,9 @@
     "typescript": "latest",
     "unbuild": "latest",
     "vitest": "latest"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint",
+    "pre-push": "pnpm test:unit"
   }
 }
