chore: update prepublish script

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "lint": "eslint . --fix",
     "prepare": "simple-git-hooks",
     "prepack": "pnpm build",
-    "prepublishOnly": "pnpm lint && pnpm test",
+    "prepublishOnly": "pnpm lint && pnpm test && pnpm test:knip",
     "release": "bumpp && pnpm publish",
     "test": "pnpm test:unit && pnpm test:types",
     "test:unit": "vitest",
