--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
         run: pnpm test:types
 
       - name: 🧪 Test project
-        run: pnpm test:unit -- --coverage
+        run: npx vitest run --coverage
 
       - name: 🟩 Coverage
         uses: codecov/codecov-action@v5
