chore: add keywords, add description, add git links

--- a/package.json
+++ b/package.json
@@ -3,11 +3,54 @@
   "type": "module",
   "version": "1.0.15",
   "packageManager": "pnpm@10.11.0",
-  "description": "",
+  "description": "A high-performance TypeScript library for string similarity, distance algorithms, and text normalization utilities",
   "author": "",
   "license": "MIT",
-  "repository": "moshetanzer/text-toolbox",
-  "keywords": [],
+  "homepage": "https://github.com/moshetanzer/text-toolbox#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/moshetanzer/text-toolbox.git"
+  },
+  "bugs": {
+    "url": "https://github.com/moshetanzer/text-toolbox/issues"
+  },
+  "keywords": [
+    "string",
+    "text",
+    "utilities",
+    "toolbox",
+    "similarity",
+    "distance",
+    "levenshtein",
+    "jaro-winkler",
+    "metaphone",
+    "text-processing",
+    "string-comparison",
+    "normalization",
+    "case-conversion",
+    "case-formatter",
+    "string-cleaning",
+    "whitespace",
+    "diacritics",
+    "text-transformation",
+    "typescript",
+    "natural-language-processing",
+    "nlp",
+    "string-manipulation",
+    "string-similarity",
+    "string-distance",
+    "cosine-similarity",
+    "dice-coefficient",
+    "text-normalization",
+    "camelcase",
+    "kebabcase",
+    "snakecase",
+    "emoji",
+    "fingerprint",
+    "tree-shakeable",
+    "no-dependencies",
+    "performance"
+  ],
   "sideEffects": false,
   "exports": {
     ".": "./dist/index.mjs"
